--- a/ScrumTools/ScrumTools.Android/Properties/AndroidManifest.xml
+++ b/ScrumTools/ScrumTools.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionName="1.2" package="com.juanlopez.scrumtools" android:versionCode="3">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" package="com.juanlopez.scrumtools" android:versionCode="3" android:versionName="1.2">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="Scrum Tools" android:icon="@drawable/icon"></application>
+	<application android:label="Scrum Tools"></application>
 </manifest>
