--- a/ScrumTools/ScrumTools.Android/packages.config
+++ b/ScrumTools/ScrumTools.Android/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EngineIoClientDotNet" version="1.0.3" targetFramework="monoandroid71" />
-  <package id="FreshMvvm" version="2.2.3" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="EngineIoClientDotNet" version="1.0.5" targetFramework="monoandroid80" />
+  <package id="FreshMvvm" version="2.2.4" targetFramework="monoandroid80" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
-  <package id="SocketIoClientDotNet" version="1.0.3" targetFramework="monoandroid71" />
-  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid80" />
+  <package id="SocketIoClientDotNet" version="1.0.5" targetFramework="monoandroid80" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="monoandroid80" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
@@ -32,7 +32,7 @@
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.Security" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="monoandroid80" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
@@ -47,29 +47,39 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="UXDivers.GorillaPlayer.SDK" version="1.1.0.4" targetFramework="monoandroid71" />
-  <package id="WebSocket4Net" version="0.15.0" targetFramework="monoandroid71" />
+  <package id="WebSocket4Net" version="0.15.2" targetFramework="monoandroid80" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Forms" version="2.4.0.38779" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Annotations" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Compat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.UI" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Design" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Fragment" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Transition" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v4" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Forms" version="2.5.0.280555" targetFramework="monoandroid80" />
 </packages>
